--- a/damai-server-client/pom.xml
+++ b/damai-server-client/pom.xml
@@ -19,7 +19,7 @@
     <modules>
 <!--        <module>damai-order-client</module>-->
         <module>damai-base-data-client</module>
-<!--        <module>damai-user-client</module>-->
+        <module>damai-user-client</module>
 <!--        <module>damai-job-client</module>-->
 <!--        <module>damai-customize-client</module>-->
 <!--        <module>damai-program-client</module>-->
@@ -33,12 +33,12 @@
             <artifactId>damai-common</artifactId>
             <version>${revision}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.example</groupId>-->
-<!--            <artifactId>damai-service-common</artifactId>-->
-<!--            <version>${revision}</version>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>damai-service-common</artifactId>
+            <version>${revision}</version>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
