--- a/damai-server/pom.xml
+++ b/damai-server/pom.xml
@@ -17,8 +17,15 @@
 
 
     <modules>
-
+<!--        <module>damai-order-service</module>-->
         <module>damai-gateway-service</module>
+<!--        <module>damai-base-data-service</module>-->
+        <module>damai-user-service</module>
+<!--        <module>damai-admin-service</module>-->
+<!--        <module>damai-customize-service</module>-->
+<!--        <module>damai-program-service</module>-->
+<!--        <module>damai-pay-service</module>-->
+<!--        <module>damai-mybatis-plus-service</module>-->
     </modules>
 
 </project>
