--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,14 @@
     <modules>
         <module>damai-common</module>
         <module>damai-redis-tool-framework</module>
+<!--        <module>damai-elasticsearch-framework</module>-->
         <module>damai-id-generator-framework</module>
-
+        <module>damai-spring-cloud-framework</module>
+<!--        <module>damai-thread-pool-framework</module>-->
+<!--        <module>damai-redisson-framework</module>-->
         <module>damai-server</module>
         <module>damai-server-client</module>
-
+<!--        <module>damai-captcha-manage-framework</module>-->
     </modules>
 
     <properties>
