fix: gateway + user service 实现 bug已修复

--- a/damai-redis-tool-framework/pom.xml
+++ b/damai-redis-tool-framework/pom.xml
@@ -16,7 +16,7 @@
     <packaging>pom</packaging>
 
     <modules>
-<!--        <module>damai-redis-common-framework</module>-->
+        <module>damai-redis-common-framework</module>
         <module>damai-redis-framework</module>
 <!--        <module>damai-redis-stream-framework</module>-->
     </modules>
