--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
         <maven-resources.version>3.2.0</maven-resources.version>
         <maven-source.version>3.2.1</maven-source.version>
         <flatten-maven.version>1.4.1</flatten-maven.version>
-        <!-- <fastjson.version>2.0.9</fastjson.version> --> <!-- Duplicated fastjson.version, using the first one -->
-        <!-- <oshi-core.version>6.2.2</oshi-core.version> --> <!-- Duplicated oshi-core.version -->
+        <!-- <fastjson.version>2.0.9</fastjson.version> -->
+        <!-- <oshi-core.version>6.2.2</oshi-core.version> -->
         <commons-lang.version>2.6</commons-lang.version>
         <jjwt.version>0.9.1</jjwt.version>
         <hutool.version>5.8.25</hutool.version>
@@ -119,8 +119,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <release>${java.version}</release>
                     <encoding>${project.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
@@ -137,7 +136,6 @@
                 <artifactId>maven-source-plugin</artifactId>
                 <version>${maven-source.version}</version>
                 <configuration>
-                    <!--install、deploy时会上传源码jar包到仓库，默认是true-->
                     <attach>true</attach>
                 </configuration>
                 <executions>
@@ -157,7 +155,6 @@
                     <updatePomFile>true</updatePomFile>
                 </configuration>
                 <executions>
-                    <!-- enable flattening -->
                     <execution>
                         <id>flatten</id>
                         <phase>process-resources</phase>
@@ -165,7 +162,6 @@
                             <goal>flatten</goal>
                         </goals>
                     </execution>
-                    <!-- ensure proper cleanup -->
                     <execution>
                         <id>flatten.clean</id>
                         <phase>clean</phase>
