--- a/damai-redis-tool-framework/damai-redis-common-framework/pom.xml
+++ b/damai-redis-tool-framework/damai-redis-common-framework/pom.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	
     <parent>
         <groupId>com.example</groupId>
         <artifactId>damai-redis-tool-framework</artifactId>
@@ -11,17 +10,16 @@
     </parent>
 
 
-    <artifactId>damai-redis-framework</artifactId>
+    <artifactId>damai-redis-common-framework</artifactId>
 
-    <name>damai-redis-tool</name>
-    <description>redis封装</description>
-
+    <name>damai-redis-common-framework</name>
+    <description>redis-common封装</description>
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
-                <!--去除spring boot自带的 -->
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-logging</artifactId>
@@ -32,16 +30,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-
+        
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>damai-common</artifactId>
-            <version>${revision}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>damai-redis-common-framework</artifactId>
             <version>${revision}</version>
         </dependency>
     </dependencies>
